# matsu7874

./: LICENSE  README.md
talks/2020/20200630_shinjukurs/: README.md
talks/2020/20200630_shinjukurs/property_testing/: Cargo.toml
talks/2020/20200630_shinjukurs/property_testing/src/: lib.rs
talks/2020/20200630_shinjukurs/property_testing/tests/: pt.rs  qc.rs
