[package]
name = "property_testing"
version = "0.1.0"
authors = ["matsu7874 <mtsmtkmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck = "0.9"
[dev-dependencies]
quickcheck_macros = "0.9"
proptest = "0.10.0"